--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ text-align: center;
 }
 p{
 text-align: center; 
-color: blue; 
+color: black; 
 font-size: 20px; 
-font-family: cursive;
+font-family: Arial, sans-serif;
 }
